codegen fatcat-api-spec
